# jain-ai

./: .env.example  .gitignore  README.md  alembic.ini  app.py  pyproject.toml  wsgi.py
data/raw/academics/: AEROSPACE_ENGINEERING_2024_2028.txt  Aeronautical_engineering_2024_2028.txt  academics_overview.txt  civil_engineering_2024_2028.txt  common_student_rules_and_admin.txt  cse_ai_btech_2024_2028.txt  cse_ai_driven_devops_btech_2024_2028.txt  cse_aide_btech_2024_2028.txt  cse_aiml_btech_2024_2028.txt  cse_blockchain_technology_btech_2024_2028.txt  cse_core_btech_2024_2028.txt  cse_ctis_btech_2024_2028.txt  cse_ctma_btech_2024_2028.txt  cse_cyber_physical_system_btech_2024_2028.txt  cse_cybersecurity_btech_2024_2028.txt  cse_datascience_btech_2024_2028.txt  cse_internet_of_things_btech_2024_2028.txt  cse_software_engineering_btech_2024_2028.txt  cse_star_btech_2024_2028.txt  ece_btech_2024_2028.txt  eee_btech_2024_2028.txt  even_semester_calendar_2026.txt  ise_core_btech_2024_2028.txt  mechanical_engineering_btech_2024_2028.txt  placements_fet_ug_2026.txt
data/raw/admissions/: admission_contacts.txt  admissions_overview.txt  branch_wise_fees.txt
data/raw/campus/: anti_ragging_policy.txt  campus_virtual_tour.txt
docs/: api.md  architecture.md  data_authoring.md  deployment.md  rag_pipeline.md
scripts/: index_data.py  reindex_documents.py  seed_data.py  verify_setup.py
src/jain_ai/: app_factory.py  config.py  extensions.py
templates/: index.html
tests/: test_chat_service.py  test_ocr.py  test_rag.py  test_routes.py  test_sessions.py  test_uploads.py
(+61 files in other folders)
